# lab-neo4j-aws

./: .gitignore  ALIGN.md  CLAUDE.md  CLEAN.md  CLEAN_UP.md  CONFIG.txt  CONTENT_UPDATE.md  FIX.md  GUIDE_DEV_CONTAINERS.md  README.md  REVIEW.md  SITE_UPDATE.md  data_utils.py
.devcontainer/: devcontainer.json
Lab_0_Sign_In/: README.md
Lab_1_Aura_Setup/: EXPLORE.md  README.md
Lab_2_Aura_Agents/: README.md
Lab_3_Bedrock_Setup/: README.md
Lab_3_Intro_to_Bedrock_and_Agents/: 01_basic_strands_agent.ipynb  02_deploy_to_agentcore.ipynb  README.md
Lab_4_GraphRAG_Search/: 03_vector_cypher_retriever.ipynb  04_strands_graphrag_agent.ipynb  README.md
Lab_4_Graph_Enriched_Search/: 00_intro_strands_mcp.ipynb  01_vector_search_mcp.ipynb  02_graph_enriched_search_mcp.ipynb  03_fulltext_hybrid_search_mcp.ipynb  README.md
Lab_4_Intro_to_Bedrock_and_Agents/: README.md  basic_langgraph_agent.ipynb  bedrock_agentcore_mcp_agent.ipynb  deploy_agentcore_agent.ipynb
Lab_4_MCP_Retrieval/: 01_vector_search_mcp.ipynb  02_graph_enriched_search_mcp.ipynb  03_fulltext_hybrid_search_mcp.ipynb  README.md
Lab_5_GraphRAG/: 05_hybrid_rag.ipynb  06_hybrid_search.ipynb  README.md
Lab_6_Advanced_Agents/: README.md  neo4j_langgraph_mcp_agent.ipynb  neo4j_strands_mcp_agent.ipynb
Lab_6_GraphRAG/: 01_data_loading.ipynb  02_embeddings.ipynb  06_hybrid_search.ipynb  (+1 more)
new-workshops/: DATA_LOADING.md  ENTITY.md  README.md  pyproject.toml
new-workshops/solutions/: 01_01_data_loading.py  01_02_embeddings.py  01_03_entity_extraction.py  01_04_full_dataset_queries.py  01_full_data_load.py  02_01_vector_retriever.py  02_02_vector_cypher_retriever.py  02_03_text2cypher_retriever.py  03_01_simple_agent.py  03_02_vector_graph_agent.py  03_03_text2cypher_agent.py  05_01_fulltext_search.py  05_02_hybrid_search.py  config.py  test_connection.py
setup/solutions_bedrock/: pyproject.toml
setup/solutions_bedrock/src/graphrag_validator/: config.py  data.py  main.py  retrievers.py
(+168 files in other folders)
