[project]
name = "graphrag-validator"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "neo4j-graphrag[bedrock] @ git+https://github.com/neo4j-partners/neo4j-graphrag-python.git@bedrock-embeddings",
    "python-dotenv",
    "pydantic-settings",
    "typer[all]>=0.9",
    "rich",
    "nest-asyncio",
]

[project.scripts]
graphrag-validator = "graphrag_validator.main:app"
